--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,16 +33,10 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="0dp"
-
+            android:background="#456456"
             />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:src="@android:drawable/sym_def_app_icon" />
+
     </LinearLayout>
 
     <fragment
