--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -3,5 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorPrimary">
-
+<android.support.v7.widget.SearchView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"    >
+</android.support.v7.widget.SearchView>
 </android.support.v7.widget.Toolbar>
