--- a/app/src/main/res/layout/fragment_discuss.xml
+++ b/app/src/main/res/layout/fragment_discuss.xml
@@ -1,16 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="example.abhishek.com.materialdesign.fragments.FragmentDiscuss">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="This is page "
-        android:layout_margin="8dp"
-        android:id="@+id/position"/>
+        android:layout_height="match_parent"
+        android:text="Discussion Fragment" />
+
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabdiscuss"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -22,4 +23,4 @@
         android:layout_marginRight="20dp"
         android:elevation="6dp"/>
 
-</RelativeLayout>
+</FrameLayout>
